# src/routes.js
@@ -9,6 +9,7 @@ import handler from "./middlewares/handler.js";
 import AuthRouter from "./routers/auth/authRouter.js"
 import UserRouter from "./routers/user/userRouter.js"
 import MaintenanceRouter from "./routers/maintenance/maintenanceRouter.js"
+import GarageRouter from "./routers/garage/garageRouter.js"
 
 import { verify } from "./controllers/authController.js"
 
@@ -18,7 +19,8 @@ routes.use(handler);
 
 routes.use("/login", AuthRouter)
 routes.use("/api/users", verify, UserRouter)
-routes.use("/api/maintenence", verify, MaintenanceRouter)
+routes.use("/api/maintenance", verify, MaintenanceRouter)
+routes.use("/api/garage", verify, GarageRouter)
 
 routes.use(InternalServerError)
 routes.use(NotFound);
